tests/conformance/syntax/positive/lambda_forms_valid.ditt
module Syntax.LambdaForms where

postulate C : Cat
id_ascii : (x : C) -> C = \x. x
id_unicode : (x : C) -> C = λx. x
