tests/conformance/syntax/negative/lambda_missing_dot_invalid.ditt
module Syntax.LambdaFormsBad where

postulate C : Cat
id : (x : C) -> C = \x x
